@@ -274,7 +274,7 @@ module.exports = function(timeout, mml_store, map_store, mapnik_opts) {
                     xml: data,
                     strict: !!params.strict, // force boolean
                     mml: {
-                        format: params.format
+                        format: params.format // seems to be unused
                     }
                 };
 
@@ -283,6 +283,9 @@ module.exports = function(timeout, mml_store, map_store, mapnik_opts) {
             },
             function makeAdaptor(err, source){
                 if ( err ) throw err;
+                var format = params.format;
+                if ( format == 'png' ) format = 'png8'; //png8:m=h';
+                source._info.format = format;
                 return new TileliveAdaptor(source, params.format);
             },
             function returnCallback(err, source){
